# poller

./: CMakeLists.txt  README.md
.github/workflows/: ctest.yml
include/actors/: actor.hpp  actor_message_pair.hpp  persisting_actor.hpp
include/concepts/: actor_concepts.hpp  message_concepts.hpp  persister_concepts.hpp
include/loggers/: in_memory_logger.hpp  logger.hpp  logging_message.hpp
include/messages/: message.hpp  string_message.hpp
include/persisters/: in_memory_persister.hpp  persister.hpp
include/pollers/: fixed_text_poller.hpp  poller.hpp
include/settings/: fixed_text_settings.hpp  settings.hpp
include/sinks/: sink.hpp  sink_actor.hpp  sink_message.hpp  sinkable_actor.hpp
include/timers/: n_shot_timer.hpp  timer.hpp
src/loggers/: in_memory_logger.cpp
src/messages/: string_message.cpp
src/pollers/: fixed_text_poller.cpp
src/settings/: fixed_text_settings.cpp
tests/loggers/: test_in_memory_logger.cpp
tests/messages/: test_string_message.cpp
tests/persisters/: test_in_memory_persister.cpp
tests/timers/: test_n_shot_timer.cpp
